--- a/src/CardSection.css
+++ b/src/CardSection.css
@@ -1,7 +1,6 @@
 
 .card-container{
-    margin:20px;
-    background-color: aquamarine;
+    background-color: rgb(255, 250, 250);
     padding-top: 3%;
     display:flex;
     flex-wrap: wrap;
@@ -20,12 +19,13 @@
 }
 .user-img{
     background-color: rgb(33, 179, 236);
-    width:50px;
+    width:60px;
     height: 50px;
     text-align: center;
     border-radius: 50%;
 }
 .person-icon{
+    margin:0;
     padding: 8px;
     color: white;
     transform: scale(1.5);
@@ -36,4 +36,8 @@
 .text{
     color:grey;
     line-height: normal;
+    display: -webkit-box;
+    -webkit-line-clamp: 3;
+    -webkit-box-orient: vertical;  
+    overflow: hidden;
 }
