--- a/src/Components/SearchPage.css
+++ b/src/Components/SearchPage.css
@@ -6,6 +6,7 @@
 .header-section{
     height:30vh;
     padding-left: 50px;
+    padding-top: 20px;
 }
 .header-section p{
     font-weight: 400;
@@ -20,6 +21,7 @@ img{
 .search-section{
     display: flex;
     margin-left:15px;
+    margin-top: 20px;
     /* padding:20px 5px 20px 5px; */
     width: 35%;
     height: 25%;
