--- a/src/Components/ProfilePage.css
+++ b/src/Components/ProfilePage.css
@@ -53,6 +53,8 @@
 .card{
     text-align: left;
     margin-top: 5px;
+    width: 100%;
+    height: 4rem;
     /* box-shadow: 1px 2px rgb(182, 182, 182); */
 }
 .card-title{
@@ -86,8 +88,10 @@
 .text{
     color:grey;
     line-height: normal;
-    /* display: -webkit-box;
-    -webkit-line-clamp: 3;
-    -webkit-box-orient: vertical;  
-    overflow: hidden; */
+}
+@media only screen and (max-width: 400px) {
+    .credentials{
+        display: flex;
+        margin-top:10px;
+    }
 }
