--- a/src/Components/SearchPage.css
+++ b/src/Components/SearchPage.css
@@ -45,3 +45,32 @@ input::placeholder{
     font-family: 'Karla', sans-serif;
     color: white;
 }
+
+@media only screen and (max-width: 400px) {
+    .search-container{
+        margin:2px 2px 0 2px;
+        background-color: rgb(243, 243, 243);
+    }
+    .header-section{
+        height:20vh;
+        padding-top: 2px;
+        padding-left: 10px;
+    }
+    .header-section p{
+        font-weight: 400;
+        font-size: 20px;
+    }
+    img{
+        width:40px;
+        height:40px;
+    }
+    .search-section{
+        display: flex;
+        margin-left:15px;
+        margin-top: 5px;
+        /* padding:20px 5px 20px 5px; */
+        width: 45%;
+        height: 25%;
+        background-color: rgb(33, 179, 236);
+    }
+}
