--- a/src/Components/ProfilePage.css
+++ b/src/Components/ProfilePage.css
@@ -85,9 +85,19 @@
     position: inherit;
     padding-left: 20px;
 }
+.card-title{
+    display: -webkit-box;
+    -webkit-line-clamp: 1;
+    -webkit-box-orient: vertical;  
+    overflow: hidden;
+}
 .text{
     color:grey;
     line-height: normal;
+    display: -webkit-box;
+    -webkit-line-clamp: 1;
+    -webkit-box-orient: vertical;  
+    overflow: hidden;
 }
 @media only screen and (max-width: 400px) {
     .credentials{
