--- a/src/Components/CardSection.css
+++ b/src/Components/CardSection.css
@@ -20,23 +20,16 @@
     padding-top: 5px;
     display: flex;
 }
-.user-img{
-    background-color: rgb(33, 179, 236);
+.user-image img{
     width:60px;
-    height: 50px;
-    text-align: center;
+    height: 60px;
+    padding:5px;
     border-radius: 50%;
-}
-.person-icon{
-    margin:0;
-    padding: 8px;
-    color: white;
-    transform: scale(1.5);
 }
 .user-details{
     padding-left: 10px;
 }
-.text{
+.textdet{
     color:grey;
     line-height: normal;
     display: -webkit-box;
